data/derived/sp14/progs/unify/prog4552.ml.out
Characters 81-83:
  | Sine var1 -> sin(pi*(eval(var1, x, y)))
                     ^^
Error: This expression has type float but an expression was expected of type
         int
